amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-output-type-object-fields.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-output-type-object-fields.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 4

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-output-type
  Message: Type 'InputType' from field 'inputReturnField' must be an output type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-output-type-object-fields.api.graphql#/declares/shape/Object
  Property: http://www.w3.org/ns/shacl#property
  Range: [(10,4)-(10,31)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-output-type
  Message: Type '[InputType]' from field 'inputReturnFieldArray' must be an output type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-output-type-object-fields.api.graphql#/declares/shape/Object
  Property: http://www.w3.org/ns/shacl#property
  Range: [(11,4)-(11,38)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-output-type
  Message: Type 'InputType' from field 'inputReturnFieldOperation' must be an output type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-output-type-object-fields.api.graphql#/declares/shape/Object
  Property: http://www.w3.org/ns/shacl#property
  Range: [(12,4)-(12,53)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-output-type
  Message: Type '[InputType]' from field 'inputReturnFieldOperationArray' must be an output type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-output-type-object-fields.api.graphql#/declares/shape/Object
  Property: http://www.w3.org/ns/shacl#property
  Range: [(13,4)-(13,60)]
  Location: 
